Use well defined order where we output text and generate config. Makes config stable and simple tests predictable.